[package]
name = "Rust_NetDropper_POC"
author = "github.com/Jaxii"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include-crypt = "0.1.1"
base64 = "0.13.0"
obfstr = "0.3.0"
aes = "0.7.5"
houdini = "1.0.2"
winapi = {version = "0.3.9", features=["memoryapi", "libloaderapi", "processthreadsapi", "wincon", "winuser", "debugapi", "psapi", "synchapi", "sysinfoapi"]}
win32-error = "0.9.0"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
debug = false
